Correct text alignment on window resize (still not responsive)

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -217,6 +217,9 @@ nav {
     min-height: calc(100vh - 75px);
     background-color: var(--light-gray);
     padding: 0px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .title {
@@ -239,11 +242,13 @@ h1 {
     font-size: 1.2rem;
     padding-bottom: 3px;
     font-weight: 600;
+    text-align: left;
 }
 
 .card-text > p {
     text-align: justify;
     font-size: 0.9rem;
+    max-width: 630px;
 }
 
 .indent {
@@ -267,8 +272,8 @@ li {
 }
 
 .card-img > img{
-    max-width: 600px;
-    width: 99%;
+    max-width: 630px;
+    width: 100%;
     margin-bottom: 10px;
     border: 1px solid black;
     border-radius: 2px;
